src/objects/FlexNote__c.object
<CustomObject>
    <description>Stores FlexNotes for a Case Object.</description>
    <fields>
        <fullName>Answer_Date_Time__c</fullName>
        <label>Answer Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>FlexNotes</relationshipLabel>
        <relationshipName>FlexNotes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CodeDescriptionSourcePart1__c</fullName>
        <description>Used for Legacy Data Load only</description>
        <label>CodeDescriptionSourcePart1</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CodeDescriptionSourcePart2__c</fullName>
        <description>Used Legacy Data Load only</description>
        <label>CodeDescriptionSourcePart2</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CodeDescription__c</fullName>
        <label>Code Description</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>CreatedBy.FirstName &amp;&quot; &quot;&amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlexNoteQuestionCode__c</fullName>
        <formula>FlexNote_Question__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FlexNoteQuestionCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlexNote_Question__c</fullName>
        <label>FlexNote Question</label>
        <referenceTo>FlexNoteQuestion__c</referenceTo>
        <relationshipLabel>FlexNotes</relationshipLabel>
        <relationshipName>FlexNotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>IsSecure__c</fullName>
        <formula>FlexNote_Question__r.IsSecure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsSecure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Answer__c</fullName>
        <label>Answer (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <formula>LastModifiedBy.FirstName &amp;&quot; &quot;&amp; LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyId__c</fullName>
        <externalId>true</externalId>
        <label>LegacyId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <label>Question</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Flex Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>FlexNote_Question__c</columns>
        <columns>Question__c</columns>
        <columns>Is_Answer__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Answer_Date_Time__c</columns>
        <columns>Order__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FN-{00000000}</displayFormat>
        <label>Flex Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FlexNotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>